export enum PaymentTargetType {
  MEMBERSHIP = 'MEMBERSHIP',
  ORDER = 'ORDER',
}
